Fix T79309: Safe Areas are not visible